dataset1235/2025-2/2947369575/users/2826236660/executions/3873599344_211162095.log
== RUN (2025-08-25 22:18:53)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:43:46)
-- CODE: 
print(""
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:45:00)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:43:42)
-- CODE: 
print(""
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:44:53)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 22:18:54)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:43:48)
-- CODE: 
print(""
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 22:19:00)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:43:50)
-- CODE: 
print(""
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 22:18:47)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
